--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 
 
       function fetchToken(contractAddress, tokenIDAsHex) {
+        console.log('FETCH', {contractAddress, tokenIDAsHex});
         const data = '0xc87b56dd' + tokenIDAsHex.padStart(64, '0');
 
         return fetch('http://localhost:8545', {
@@ -169,13 +170,22 @@
               'latest'
             ]
           })
-        });
+        }).then((response) => response.json())
+          .then((json) => {
+            if (json.error) {
+              console.error(json.error);
+              throw json.error;
+            }
+            return json;
+          })
+          .then((json) => json.result)
       }
 
       let firsTime = true;
       async function fetchIt(contractAddress, tokenIDAsHex) {
 
         if (contractAddress && tokenIDAsHex) {
+          console.log('fetchIT', {contractAddress, tokenIDAsHex})
           return fetchToken(contractAddress, tokenIDAsHex);
         } else {
           if (firsTime) {
@@ -188,16 +198,11 @@
             title.innerHTML = "No Token Found";
             return undefined;
           }
-          return fetchToken(data.contractAddress, data.tokenIDAsHex).
-          then((response) => response.json())
-          .then((json) => {
-            if (json.error) {
-              console.error(json.error);
-              throw json.error;
-            }
-            return json;
-          })
-          .then((json) => json.result)
+
+          console.log('lasttransfer', {contractAddress: data.contractAddress, tokenIDAsHex: data.tokenIDAsHex})
+
+          return fetchToken(data.contractAddress, data.tokenIDAsHex);
+
         }
       }
 
@@ -205,7 +210,7 @@
       let last_tokenID;
       let last_contractAddress;
 			async function refresh() {
-				const hashStr = location.hash && location.hash.slice(1);
+				const hashStr = location.hash && location.hash.slice(1).toLowerCase();
 
         let tokenIDAsHex;
         let contractAddress;
@@ -221,8 +226,6 @@
 
           tokenIDAsHex = tokenID.startsWith('0x') ? tokenID.slice(2) : parseInt(tokenID).toString(16);
         }
-
-        // console.log({tokenIDAsHex, contractAddress});
 
         const tokenURIData = await fetchIt(contractAddress, tokenIDAsHex);
         if (!tokenURIData) {
