--- a/web/src/app.html
+++ b/web/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<script src="/asm-bundle.js"></script>
 	</head>
 	<body>
 		<div>%sveltekit.body%</div>
