--- a/web/static/inspect.html
+++ b/web/static/inspect.html
@@ -197,7 +197,7 @@
             return undefined;
           }
 
-          console.log('lasttransfer', {contractAddress: data.contractAddress, tokenIDAsHex: data.tokenIDAsHex})
+          // console.log('lasttransfer', {contractAddress: data.contractAddress, tokenIDAsHex: data.tokenIDAsHex})
 
           return fetchToken(data.contractAddress, data.tokenIDAsHex);
 
